--- a/project/src/main/resources/static/css/mypage.css
+++ b/project/src/main/resources/static/css/mypage.css
@@ -382,3 +382,11 @@ html, body {
 #imagePreviewModal .modal-backdrop {
     z-index: 1055;
 }
+
+/* 방 디테일 이미지 */
+.room-detail-image{
+    width:100%;
+    height:260px;
+    object-fit:cover;
+    border-radius:0;
+}
